--- a/html-demo/index.html
+++ b/html-demo/index.html
@@ -2,48 +2,58 @@
 <html>
     <head>
         <title>About Me</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
 <body>
 
     <h1>About Me</h1>
-    <p>
+    <p id="basic-text">
         Hi, My name is Maggie Laflam and I'm from Roanoke, Virginia. 
         I currently go to the University of Virginia where I study Computer Science.
     </p>
 
     <h2>Hobbies and Interests</h2>
-    <ul>
+    <ul class="list">
         <li>Gardening</li>
         <li>Reading Fantasy or Sci-Fi</li>
         <li>Playing Oboe</li>
     </ul>
 
-    <h3>Personal Projects</h3>
+    <h3 class="sub-heading">Personal Projects:</h3>
     <div>
-        <p>
+        <p id="basic-text">
             <a href="https://mlaflam.github.io/flora-finder/" target="_blank">Flora Finder</a>
             - Flora Finder is a native plant search engine. Simply type in your state name and it will propogate results for native plants near you!
         </p>
     </div>
     <div style="display: flex;">
         
-        <p>
+        <p id="basic-text">
             <a href="https://mlaflam.github.io/youtube-mockup/" target="_blank"> Youtube Mockup</a>
             - This is a simple Mockup of the popular website Youtube. I made this over a past summer to learn skills such as HTML and CSS.
         </p>
     </div>
 
-    <h3>Pets and Plants</h3>
-    <p>
-        I have a dog named Atticus thats a Shi-poo. 
-        He's not named after Finch from TKAM but after a detective from one of my mom's favorite shows.
-        He is the cutest dog in the world and no one can convince me otherwise!
-        <img src="Atticus.jpeg" width="300px">
-    </p>
+    <h3 class="sub-heading">Pets and Plants:</h3>
+    <div>
+        <p id="basic-text" class="pic-description">
+            I have a dog named Atticus thats a Shi-poo.
+            He's not named after Finch from TKAM but after a detective from one of my mom's favorite shows.
+            He is the cutest dog in the world and no one can convince me otherwise!
+        </p>
+        <img src="Atticus.jpeg" class="picture">
+    </div>
 
-    <p>I am also a proud plant mom of over 50 plants! It's been a lot harder to keep them alive during college though...</p>
-    <img src="Plants.jpeg" width="300px">
+    <div>
+        <p id="basic-text" class="pic-description">
+            I am also a proud plant mom of over 50 plants! It's been a lot harder to keep them alive during
+            college though...
+        </p>
+        <img src="Plants.jpeg" class="picture">
+
+    </div>
+
 </body>
 
 </html> 
