--- a/html-demo/index.html
+++ b/html-demo/index.html
@@ -9,7 +9,7 @@
 
     <h1>About Me</h1>
     <p id="basic-text">
-        Hi, My name is Maggie Laflam and I'm from Roanoke, Virginia. 
+        Hi, my name is Maggie Laflam and I'm from Roanoke, Virginia. 
         I currently go to the University of Virginia where I study Computer Science.
     </p>
 
@@ -31,7 +31,7 @@
         
         <p id="basic-text">
             <a href="https://mlaflam.github.io/youtube-mockup/" target="_blank" class="link"> Youtube Mockup</a>
-            - This is a simple Mockup of the popular website Youtube. I made this over a past summer to learn skills such as HTML and CSS.
+            - This is a simple Mockup of the popular website YouTube. I made this over a past summer to learn skills such as HTML and CSS.
         </p>
     </div>
 
